--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "fundoo-notes-app-using-_graphql_mongodb",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
   "author": "cmdshakeel",
@@ -13,6 +12,7 @@
     "body-parser": "^1.19.0",
     "epress": "0.0.1-security",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "graphql": "^15.6.0",
     "mongoose": "^6.0.7"
   },
