--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "fundoo-notes-app-using-_graphql_mongodb",
+  "name": "graphql-mongodb-",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon Server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
-  "author": "cmdshakeel",
+  "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "epress": "0.0.1-security",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.6.0",
+    "joi": "^17.4.2",
+    "joi-objectid": "^4.0.2",
     "mongoose": "^6.0.7"
   },
   "devDependencies": {
