--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "graphql": "^15.6.0",
     "joi": "^17.4.2",
     "joi-objectid": "^4.0.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.7"
   },
   "devDependencies": {
