--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node  Server.js"
   },
   "author": "",
   "license": "ISC",
@@ -24,3 +24,4 @@
     "nodemon": "^2.0.13"
   }
 }
+  
