--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node  Server.js"
+    "start": "nodemon  Server.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,10 +18,10 @@
     "joi": "^17.4.2",
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.7"
+    "mongoose": "^6.0.7",
+    "nodemailer": "^6.6.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
   }
 }
-  
